<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/profile">

            <ImageView
                android:id="@+id/logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logout_48"
                android:layout_gravity="right"
                android:layout_marginEnd="16dp"/>
            <ImageView
                android:id="@+id/home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home_48"
                android:layout_gravity="right"
                android:layout_marginEnd="16dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPrincipal"
        app:layout_constraintEnd_toEndOf="@id/appbarLayout"
        app:layout_constraintStart_toStartOf="@id/appbarLayout"
        app:layout_constraintTop_toBottomOf="@id/appbarLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/person_24"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginTop="80dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/camera_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            app:layout_anchorGravity="bottom|start"
            android:src="@drawable/photo_camera_24"
            app:layout_anchor="@+id/profile_image"
            android:layout_marginStart="90dp"
            android:layout_marginTop="-40dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/gallery_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:layout_anchorGravity="bottom|end"
            android:src="@drawable/image_24"
            app:layout_anchor="@+id/profile_image"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="-56dp"/>

        <!--crie um linear layout aqui após o @+id/profile_image-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            >

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:padding="10dp" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/username"
                android:padding="10dp" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone"
                android:padding="10dp" />
            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInput" />
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>